Repaired image covering of larger tiles

--- a/_sass/components/_news-headlines.scss
+++ b/_sass/components/_news-headlines.scss
@@ -7,12 +7,16 @@
 	.headline-tile {
 		float: left;
 		width: 30%;
-		background-size: cover;
-		position: relative;
 		@include box-sizing;
 
-		img {
-			opacity: 0;
+		figure {
+			background-size: cover;
+			position: relative;
+			height: 100%;
+			
+			img {
+				opacity: 0;
+			}
 		}
 
 		.summary {
